# emscriptenSolarProject

./: .gitignore  CMakeLists.txt  README.md
build-wasm/: index.js  index.wasm
src/: README.md  Texture.h  camera.h  glad.c  glad.h  main copy.cpp  main.cpp  mesh.h  model.h  shader.h  tinygltf.cpp  todo
src/build-wasm/: index.html  index.js  index.wasm
src/objects/mercury/: Mercury 1K.mtl
src/res/shaders/: 5.1.framebuffers.fs  5.1.framebuffers_screen.fs  5.1.framebuffers_screen.vs  model_loading.fs  model_loading.vs  planets.fs  planets.vs  shaderSingleColor.fs  shaderSingleColor.vs
src/shaders/: model_loading.fs  model_loading.vs  planets.fs  planets.vs  shaderSingleColor.fs  shaderSingleColor.vs
